# graph-visualization-app

./: .gitignore  README.md  generate_test_data.py  requirements.txt  run_visual_test.py  test_plugins.py  test_prikaz.html  test_prikaz_bigger.html  test_search_filter.py  test_view_bigger.html  test_view_smaller.html  test_visualizer.py
api/: pyproject.toml
api/graph_api/: __init__.py
api/graph_api/datasource_common/: base.py  type_inference.py
api/graph_api/model/: __init__.py  edge.py  graph.py  node.py
api/graph_api/services/: __init__.py  datasource_plugin.py  visualizer_plugin.py
core/graph_platform/: __init__.py  engine.py  registry.py  workspace.py
datasource-csv/: pyproject.toml
datasource-json/: pyproject.toml
datasource-json/datasource_json_plugin/: __init__.py  base.py  plugin.py
datasource_csv/: pyproject.toml
datasource_csv/datasource_csv_plugin/: __init__.py  base.py  plugin.py
datasource_csv/test_csv/: test_csv.py
datasource_csv/test_csv/test_data/: script.py
datasource_csv/test_csv/test_data/test_data_csv/: dataset_acyclic.csv  dataset_cyclic.csv
datasource_json/: pyproject.toml
datasource_json/datasource_json_plugin/: plugin.py
datasource_json/test_json/: test_json.py
datasource_json/test_json/test_data/: script.py
datasource_json/test_json/test_data/test_data_json/: graph_220_acyclic.json  graph_220_cyclic.json
datasource_json/test_json/test_data/test_json_ds/: dataset_cyclic.json  dataset_mixed.json  dataset_tree.json
graph_explorer/: README.md  manage.py
graph_explorer/explorer/: urls.py  views.py
graph_explorer/explorer/templates/explorer/: base.html  index.html
graph_explorer/explorer/tests/: test_graph_filter_validation.py  test_visualizer_date_rendering.py
graph_explorer/static/css/: graph_explorer.css
graph_explorer/static/js/: api.js  app.js  bird_view.js  mock_graph.js  query_ui.js  tree_view.js  workspace_ui.js
graph_explorer/tests_js/: test_filter_chip_flow.mjs
graph_explorer/webapp/: settings.py  urls.py
platform/: pyproject.toml
platform/graph_platform/: __init__.py  engine.py  registry.py  workspace.py
platform/graph_platform/cli/: __init__.py
scripts/: install_all.sh  reinstall_all.sh  run_django.sh
test_data/: company_acyclic.json  my_test.csv  network_cyclic.csv  roads_acyclic.csv  social_cyclic.json  tree-like-graph.json
visualizer-block/: pyproject.toml
visualizer-block/visualizer_block_plugin/: node_visual_decorator.py
visualizer-block/visualizer_block_plugin/templates/: block.html
visualizer-simple/: pyproject.toml
visualizer-simple/visualizer_simple_plugin/: __init__.py  plugin.py
visualizer-simple/visualizer_simple_plugin/templates/: simple.html
visualizer_block/: pyproject.toml
visualizer_block/visualizer_block_plugin/: __init__.py  plugin.py
visualizer_block/visualizer_block_plugin/templates/: block.html
visualizer_simple/: pyproject.toml
visualizer_simple/visualizer_simple_plugin/: plugin.py
visualizer_simple/visualizer_simple_plugin/templates/: simple.html
