[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datasource-csv-plugin"
version = "0.1.0"
description = "Placeholder CSV datasource plugin package"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["datasource_csv_plugin*"]
