[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datasource-json-plugin"
version = "0.1.0"
description = "JSON datasource plugin package"
requires-python = ">=3.11"
dependencies = ["graph_api"]

[tool.setuptools.packages.find]
where = ["."]
include = ["datasource_json_plugin*"]

[project.entry-points."graph_platform.datasource"]
json = "datasource_json_plugin.plugin:JsonDatasourcePlugin"

