[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "visualizer-block-plugin"
version = "0.1.0"
description = "Placeholder block visualizer plugin package"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["visualizer_block_plugin*"]
