[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "visualizer-simple-plugin"
version = "0.1.0"
description = "Placeholder simple visualizer plugin package"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["visualizer_simple_plugin*"]
