[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "visualizer-block-plugin"
version = "0.1.0"
description = "Detailed block visualizer plugin for graph visualization"
requires-python = ">=3.11"

dependencies = [
    "graph-api",
    "jinja2"
]

# Group "graph.visualizers"
[project.entry-points."graph.visualizers"]
block = "visualizer_block_plugin.plugin:BlockVisualizer"

[tool.setuptools.packages.find]
where = ["."]
include = ["visualizer_block_plugin*"]

[tool.setuptools.package-data]
"visualizer_block_plugin.templates" = ["*.html"]